[package]
name = "unbound-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.2"
tokio = { version = "1.37.0", features = ["full"] }
serde = "1.0.197"
serde_json = "1.0.115"
teloxide = { version = "0.12.2", features = ["macros"] }
chrono = "0.4.37"
dotenv = "0.15.0"
log = "0.4.14"
regex = "1.5.4"
env_logger = "0.9"
